<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard_item"
            android:checked="true"
            android:icon="@drawable/ic_group_black"
            android:title="@string/groups" />
        <item
            android:id="@+id/attendance_item"
            android:checked="false"
            android:icon="@drawable/ic_attendance_black"
            android:title="@string/attendance" />
        <item
            android:id="@+id/homework_item"
            android:checked="false"
            android:icon="@drawable/ic_homework_black"
            android:title="@string/homework" />
        <item
            android:id="@+id/timetable_item"
            android:checked="false"
            android:icon="@drawable/ic_timetable_black"
            android:title="@string/timetable" />
        <item
            android:id="@+id/event_item"
            android:checked="false"
            android:icon="@drawable/ic_event_black"
            android:title="@string/events" />
        <item
            android:id="@+id/chat_item"
            android:checked="false"
            android:icon="@drawable/ic_chat_black"
            android:title="@string/chat" />
        <item
            android:id="@+id/logout_item"
            android:checked="false"
            android:icon="@drawable/ic_logout_black"
            android:title="@string/logout" />
    </group>
</menu>