<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_white"
    android:padding="@dimen/spacing_small">

    <TextView
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/new_album"
        android:textColor="@color/primaryTextColor" />

    <EditText
        android:id="@+id/album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/album"
        android:layout_marginBottom="@dimen/spacing_small"
        android:hint="@string/_name"
        android:inputType="text"
        android:maxLength="50"
        android:textSize="@dimen/text_xsmall" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/album_name"
        android:background="@drawable/teal_btn_ripple"
        android:padding="@dimen/spacing_small"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/default_white"
        android:textSize="@dimen/text_xsmall" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_name"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_toRightOf="@+id/cancel_btn"
        android:background="@drawable/teal_btn_ripple"
        android:padding="@dimen/spacing_small"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/default_white"
        android:textSize="@dimen/text_xsmall" />

</RelativeLayout>