<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shikshitha.admin.newgroup.NewGroupActivity"
    tools:showIn="@layout/activity_new_group">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny">

            <EditText
                android:id="@+id/group_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:maxLength="120" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/schoolCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/for_school" />

        <LinearLayout
            android:id="@+id/class_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/select_class"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_class"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:paddingBottom="@dimen/spacing_small"
                android:popupBackground="@color/default_white" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_class" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/section_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_section"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_section"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:paddingBottom="@dimen/spacing_small"
                android:popupBackground="@color/default_white" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/teal_btn_ripple"
            android:foreground="?selectableItemBackground"
            android:onClick="createGroup"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/default_white"
            android:textSize="@dimen/text_xsmall" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>


