<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shikshitha.admin.usergroup.UserGroupActivity"
    tools:showIn="@layout/activity_user_group">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/myScrollingContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/group_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/group_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_xsmall" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_small"
                android:text="@string/members"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/member_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/no_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/ic_empty_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_members"
                        android:textColor="@color/default_tv_color" />

                </LinearLayout>

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/add_students_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/add_students"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/spacing_small"
                    android:text="@string/add_students"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/all_students_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/add_students"
                    android:layout_alignParentRight="true"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:onClick="selectAllStudents"
                    android:text="@string/select_all"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_xsmall" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/student_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/add_teacher_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="@dimen/spacing_small"
                android:text="@string/add_teachers"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/teacher_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v4.widget.SwipeRefreshLayout>

